Add typesafe repo to build.groovy for jeromq snapshot resolution

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ project.ext.vertxVersion = "2.0.0-final"
 repositories {
     mavenLocal()
     mavenCentral()
+    maven {
+        url "http://repo.typesafe.com/typesafe/repo"
+    }
 }
 
 dependencies {
